--- a/src/index.css
+++ b/src/index.css
@@ -30,13 +30,10 @@ img{
   position: absolute;
   width:32px;
   height:32px;
-  margin-top:32px;
-
 }
 
 h2{
-  margin-top :32px;
-  margin-left:48px;
+  margin : 0px 48px;
   color:#FFF;
 }
 
